# cpp_first_practice

./: CMakeLists.txt  main.cpp
